--- a/module2-solution/estilos.css
+++ b/module2-solution/estilos.css
@@ -25,7 +25,7 @@ main {
 }
 
 .section-title {
-    background-color: #cc4b4b; /* Example color */
+    background-color: #30382b; /* Example color */
     color: white;
     padding: 5px 10px;
     position: absolute;
@@ -36,15 +36,15 @@ main {
 }
 
 #section1 .section-title {
-    background-color: #ff6f61; /* Color for Chicken */
+    background-color: #e37697; /* Color for Chicken */
 }
 
 #section2 .section-title {
-    background-color: #cc4b4b; /* Color for Beef */
+    background-color: #940a0a; /* Color for Beef */
 }
 
 #section3 .section-title {
-    background-color: #f4b400; /* Color for Sushi */
+    background-color: #c1c951; /* Color for Sushi */
 }
 
 /* Desktop styles */
