--- a/module2-solution/estilos.css
+++ b/module2-solution/estilos.css
@@ -19,9 +19,12 @@ main {
 .section {
     border: 1px solid black;
     padding: 20px;
-    margin: 20px;
+    margin: 10px;
     position: relative;
     background-color: #e0e0e0;
+     flex: 1 1 30%;
+    max-width: 30%;
+    box-sizing: border-box;
 }
 
 .section-title {
